--- a/esda.html
+++ b/esda.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Dean Hardy" />
 
-<meta name="date" content="2018-02-25" />
+<meta name="date" content="2018-03-07" />
 
 <title>Using R for Exploratory Spatial Data Analysis (ESDA)</title>
 
@@ -122,7 +122,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">Using R for Exploratory Spatial Data Analysis (ESDA)</h1>
 <h3 class="subtitle"><em>ENST 382-01 GIS Applications: An Introduction to Spatial Thinking</em></h3>
 <h4 class="author"><em>Dean Hardy</em></h4>
-<h4 class="date"><em>2018-02-25</em></h4>
+<h4 class="date"><em>2018-03-07</em></h4>
 
 </div>
 
@@ -173,7 +173,7 @@ library(tmaptools)</code></pre>
 <p>Before your begin the lab exercises, you’ll need to signup for your own US Census API (Application Programming Interface) Key. This allows you to download Census data through the R interface. You can <a href="https://api.census.gov/data/key_signup.html">get your key here</a>.</p>
 <p>For Organization Name, put “St. Mary’s College of Maryland” and for your email either use your [yourname]<span class="citation">@smcm.edu</span> or personal email address. After completing the form, you’ll have to check your email to obtain your unique Census API Key.</p>
 <p>After you receive the email containing your Census API Key insert it in the code below between the quotes and run the code to install it in your R environment.</p>
-<pre class="r"><code>census_api_key(&quot;your_census_api_key_goes_here&quot;, install = TRUE)</code></pre>
+<pre class="r"><code>census_api_key(&quot;your_census_api_key_goes_here&quot;)</code></pre>
 <p>Note that copying and pasting the code snippets is fine and can be very helpful, but it’s a better idea for learning to type out the code manually each time. When you’ve really got the hang of it, then copying and pasting can save a lot of time! Try not to copy and paste the code for the remaining lab exercises.</p>
 </div>
 <div id="download-and-plot-census-data" class="section level4">
